[package]
name = "grrs"
version = "0.1.4"
authors = ["Eric Vincent <eric@efvincent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
failure = "0.1.5"
exitfailure = "0.5.1"
log = "0.4.8"
env_logger = "0.6.2"

[dev-dependencies]
predicates = "1"
assert_cmd = "0.10.0"
tempfile = "3"